logo, navbar, login done

--- a/index.html
+++ b/index.html
@@ -7,7 +7,54 @@
     <title>Discord</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
+
+
+    <header>
+
+        <section class="high flex">
+
+            <div class="logo"></div>
+
+            <ul class="navbar flex">
+
+                <li>
+                    <a href="">Scarica</a>
+                </li>
+
+                <li>
+                    <a href="">Perchè Discord</a>
+                </li>
+
+                <li>
+                    <a href="">Nitro</a>
+                </li>
+
+                <li>
+                    <a href="">Sicurezza</a>
+                </li>
+
+                <li>
+                    <a href="">Assistenza</a>
+                </li>
+
+            </ul>
+
+            <div class="button-box">
+                <button class="accedi">Accedi</button>
+            </div>
+
+        </section>
+
+    </header>
+
+
+    <main></main>
+
+
+    <footer></footer>
+
     
 </body>
 </html>
