--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <header>
 
+        <!-- logo, navbar, login section -->
         <section class="high flex">
 
             <div class="logo"></div>
@@ -41,9 +42,30 @@
 
             </ul>
 
-            <div class="button-box">
-                <button class="accedi">Accedi</button>
+            <div class="button-box login-button">
+                <button id="login">Accedi</button>
             </div>
+
+        </section>
+
+        <!-- title, presentation, mac download section -->
+        <section class="hsection">
+
+            <div class="title">
+                <h1>Il tuo posto per parlare</h1>
+            </div>
+
+            <div class="presentation">
+                <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+            </div>
+
+            <span class="button-box">
+                <button id="macdownload">Scarica per Mac</button>
+            </span>
+
+            <span class="button-box">
+                <button id="browser">Apri Discord nel tuo browser</button>
+            </span>
 
         </section>
 
