--- a/index.html
+++ b/index.html
@@ -327,7 +327,15 @@
             </ul>
         </div>
 
-        <div class="closing"></div>
+        <div class="closing flex">
+
+            <div class="logo"></div>
+
+            <div class="button-box login-button">
+                <button id="login">Registrati</button>
+            </div>
+
+        </div>
     
     </footer>
 
